--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing:border-box;
-    font-family:poppins,sans-serif;
+    box-sizing: border-box;
+    font-family: poppins,sans-serif;
 }
 body{
     display: flex;
@@ -10,66 +10,80 @@ body{
     align-items: center;
     flex-wrap: wrap;
     min-height: 100vh;
-    background: rgba(0, 0, 0, 0.747);
+    background: black;
 }
 .box{
     position: relative;
     width: 300px;
     height: 300px;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin: 40px;
-    transition: .5s;
+    transition: 0.5s;
     background: #060c21;
-    padding: 10px;
 }
-.box .card{
+.box .imgbx{
     position: absolute;
+    
     padding: 10px;
 }
-.box .card h2{
-    font-size: 30px;
-    color: crimson;
-    transition: .5s;
+.box .imgbx img{
+    max-width:300px;
+    width: 300px;
+    height: 300px;
     top: 0;
     left: 0;
+    opacity: 0.09;
+    transition: 0.5s;
+}
+.box:hover .imgbx img{
+    opacity: 1;
+    
 }
 .box:before{
     content: ' ';
     position: absolute;
     top: -2px;
     left: -2px;
-    bottom: -2px;
     right: -2px;
+    bottom: -2px;
     background: white;
-    z-index:-1;
+    z-index: -1;
 }
 .box:after{
     content: ' ';
     position: absolute;
     top: -2px;
     left: -2px;
-    bottom: -2px;
     right: -2px;
+    bottom: -2px;
     background: white;
-    z-index:-2;
-    filter: blur(40px);
+    z-index: -2;
+    filter: blur(30px);
 }
 .box:before,
 .box:after{
-    background: linear-gradient(230deg,purple,rgba(0, 0, 0, 0.719),blue);
+    background: linear-gradient(235deg,crimson,purple,yellow);
 }
-.box .content p{
+.box .content{
+    position: absolute;
+    bottom: 10%;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    background: rgba(0,0,0.4);
+    opacity: 0;
+    transition: 0.5s;
+    z-index:10;
+
+}
+.box:hover .content{
+    opacity: .7;
+}
+.box .content h2{
     font-size: 20px;
     color: white;
     font-weight: 500;
-    line-height: 25px;
-    transition: 0.5s;
-}
-.box .content:hover p{
-    color: turquoise;
-    
-}
-.box:hover{
-    transform:rotate(10deg);
+    line-height: 20px;
 }
